# overwatch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  c-cpp.yml
src/: CMakeLists.txt
src/common/: CMakeLists.txt  logging.cpp  logging.hpp  utils.cpp  utils.hpp  windows.hpp
src/overwatch/: CMakeLists.txt  main.cpp
src/overwatch/liboverwatch/: CMakeLists.txt  start.cpp  start.hpp
src/overwatch/liboverwatch/core/: CMakeLists.txt  arguments_parser.cpp  arguments_parser.hpp  config.cpp  config.hpp  overwatch_instance.cpp  overwatch_instance.hpp
src/overwatch/overwatch/: CMakeLists.txt
src/overwatch/overwatch/core/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  arguments_parser.cpp  config.cpp  config.hpp
test/: CMakeLists.txt
test/catch/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/overwatch/: 001-core-arguments_parser.cpp  CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/overwatch/: 001-core-arguments_parser.cpp  CMakeLists.txt
