cmake_minimum_required(VERSION 3.14.0)
project(overwatch)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE OFF)

set(OUTPUT_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
message(${CMAKE_CXX_COMPILER_ID})
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -fvisibility=hidden")
elseif (CMAKE_COMPILER_IS_GNUCC)
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -no-pie -fvisibility=hidden")
else()
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W4 /WX")
    set(BOOST_ROOT "$ENV{BOOST_ROOT_1_72_0}")
endif()
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_STANDARD 17)

set(Boost_DEBUG ON)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.72.0 COMPONENTS program_options log log_setup REQUIRED) 

add_subdirectory(src)
add_subdirectory(tests)